version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Materials/ImportSettings.rst.txt
.. vale off



:class:`ImportSettings`
=======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Materials.ImportSettings

   Bases: :py:obj:`object`



.. py:currentmodule:: ImportSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Filter`
            - All materials will be imported if this list of the names of
          * - :py:attr:`~Replace`
            - A boolean to specify if a material exists in Mechanical that







Property detail
---------------
.. py:property:: Filter
   :type: Optional[List[str]]


   
   All materials will be imported if this list of the names of
   specific materials to be imported is not specified.
















   ..
       !! processed by numpydoc !!

.. py:property:: Replace
   :type: Optional[bool]


   
   A boolean to specify if a material exists in Mechanical that
   it should be replaced by these imported material(s).
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on